# swagger.yaml
@@ -11,38 +11,38 @@ security:
   # (only active if the TOKENINFO_URL environment variable is set)
   - oauth2: [uid]
 paths:
-  /job_queues/{account_name}:
+  /job_queues/{owner_name}:
     get:
       tags: [Job Queues]
       operationId: app.get_job_queues1
-      summary: Get all job queues under a given account
+      summary: Get all job queues under a given owner
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
       responses:
         200:
-          description: Return job queues for the specified account
+          description: Return job queues for the specified owner
           schema:
             type: array
-  /job_queues/{account_name}/{workflow_name}/{workflow_version}:
+  /job_queues/{owner_name}/{workflow_name}/{workflow_version}:
     get:
       tags: [Job Queues]
       operationId: app.get_job_queues2
-      summary: Get all job queues for given account, workflow_name and version
+      summary: Get all job queues for given owner, workflow_name and version
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/workflow_name'
         - $ref: '#/parameters/workflow_version'
       responses:
         200:
-          description: Return job queues for the specified account
+          description: Return job queues for the specified owner
           schema:
             type: array
     post:
       tags: [Job Queues]
       operationId: app.register_job_queue1
-      summary: Register a job queue under a given account, workflow_name and version
+      summary: Register a job queue under a given owner, workflow_name and version
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/workflow_name'
         - $ref: '#/parameters/workflow_version'
         - name: job_queue
@@ -56,27 +56,27 @@ paths:
             $ref: '#/definitions/JobQueue'
         409:
           description: Workflow registration failed
-  /job_queues/{account_name}/{workflow_owner_name}/{workflow_name}/{workflow_version}:
+  /job_queues/{owner_name}/{workflow_owner_name}/{workflow_name}/{workflow_version}:
     get:
       tags: [Job Queues]
       operationId: app.get_job_queues
-      summary: Get all job queues for given account, workflow_owner_name, workflow_name and version
+      summary: Get all job queues for given owner, workflow_owner_name, workflow_name and version
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/workflow_owner_name'
         - $ref: '#/parameters/workflow_name'
         - $ref: '#/parameters/workflow_version'
       responses:
         200:
-          description: Return job queues for the specified account
+          description: Return job queues for the specified owner
           schema:
             type: array
     post:
       tags: [Job Queues]
       operationId: app.register_job_queue
-      summary: Register a job queue under a given account, workflow_owner_name, workflow_name and version
+      summary: Register a job queue under a given owner, workflow_owner_name, workflow_name and version
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/workflow_owner_name'
         - $ref: '#/parameters/workflow_name'
         - $ref: '#/parameters/workflow_version'
@@ -91,13 +91,13 @@ paths:
             $ref: '#/definitions/JobQueue'
         409:
           description: Workflow registration failed
-  /job_queues/{account_name}/{job_queue_id}/action:
+  /job_queues/{owner_name}/{job_queue_id}/action:
     put:
       tags: [Job Queues]
       operationId: app.job_queue_action
       summary: Perform an action on a job queue, eg, pause, resume
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - name: action
           in: body
@@ -107,13 +107,13 @@ paths:
       responses:
         204:
           description: Action performed
-  /jobs/{account_name}/{job_queue_id}:
+  /jobs/{owner_name}/{job_queue_id}:
     get:
       tags: [Jobs]
       operationId: app.get_jobs
       summary: Get jobs in a job queue
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - name: state
           type: string
@@ -127,7 +127,7 @@ paths:
       operationId: app.enqueue_job
       summary: Enqueue a job in a given job queue
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - name: job_file
           in: body
@@ -140,13 +140,13 @@ paths:
             $ref: '#/definitions/JobFile'
         409:
           description: Job enqueueing failed
-  /jobs/{account_name}/{job_queue_id}/summary:
+  /jobs/{owner_name}/{job_queue_id}/summary:
     get:
       tags: [Jobs]
       operationId: app.get_job_summary
       summary: Get summary information on jobs in a job queue
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - name: state
           type: string
@@ -155,13 +155,13 @@ paths:
       responses:
         200:
           description: Return jobs
-  /jobs/{account_name}/{job_queue_id}/{job_id}:
+  /jobs/{owner_name}/{job_queue_id}/{job_id}:
     get:
       tags: [Jobs]
       operationId: app.get_job
       summary: Get detail for a given job
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - name: job_id
           in: path
@@ -171,13 +171,13 @@ paths:
       responses:
         200:
           description: Return job
-  /jobs/{account_name}/{job_queue_id}/{job_id}/action:
+  /jobs/{owner_name}/{job_queue_id}/{job_id}/action:
     put:
       tags: [Jobs]
       operationId: app.job_action
       summary: Perform an action on a job, eg, pause, resume, cancel ...
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - $ref: '#/parameters/job_id'
         - name: action
@@ -188,13 +188,13 @@ paths:
       responses:
         204:
           description: Action performed
-  /workers/{account_name}/{job_queue_id}:
+  /workers/{owner_name}/{job_queue_id}:
     get:
       tags: [Workers]
       operationId: app.get_workers
       summary: Get workers registered for a job queue
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
       responses:
         200:
@@ -204,7 +204,7 @@ paths:
       operationId: app.register_worker
       summary: Register a worker for a job queue
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - name: worker
           in: body
@@ -213,13 +213,13 @@ paths:
       responses:
         200:
           description: Worker registered
-  /workers/{account_name}/{job_queue_id}/{worker_id}:
+  /workers/{owner_name}/{job_queue_id}/{worker_id}:
     get:
       tags: [Workers]
       operationId: app.get_worker
       summary: Get detail of a given worker registered for a job queue
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - $ref: '#/parameters/worker_id'
       responses:
@@ -227,13 +227,13 @@ paths:
           description: Return worker
           schema:
             $ref: '#/definitions/Worker'
-  /workers/{account_name}/{job_queue_id}/{worker_id}/action:
+  /workers/{owner_name}/{job_queue_id}/{worker_id}/action:
     put:
       tags: [Workers]
       operationId: app.worker_action
       summary: Perform an action on a worker, eg, pause, resume
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - $ref: '#/parameters/worker_id'
         - name: action
@@ -244,25 +244,25 @@ paths:
       responses:
         204:
           description: Action performed
-  /tasks/{account_name}/{job_queue_id}/{job_id}:
+  /tasks/{owner_name}/{job_queue_id}/{job_id}:
     get:
       tags: [Tasks]
       operationId: app.get_tasks
       summary: List all tasks for a given job
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - $ref: '#/parameters/job_id'
       responses:
         200:
           description: Return tasks
-  /tasks/{account_name}/{job_queue_id}/_next:
+  /tasks/{owner_name}/{job_queue_id}/_next:
     post:
       tags: [Tasks]
       operationId: app.next_task
       summary: Worker asks for the next task to run
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - name: worker
           in: body
@@ -273,13 +273,13 @@ paths:
           description: Task assigned
         404:
           description: No task to run
-  /tasks/{account_name}/{job_queue_id}/{job_id}/{task_name}/_complete:
+  /tasks/{owner_name}/{job_queue_id}/{job_id}/{task_name}/_complete:
     post:
       tags: [Tasks]
       operationId: app.complete_task
       summary: Worker reports completion of a task
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - $ref: '#/parameters/job_id'
         - $ref: '#/parameters/task_name'
@@ -290,13 +290,13 @@ paths:
       responses:
         204:
           description: Action performed
-  /tasks/{account_name}/{job_queue_id}/{job_id}/{task_name}/_fail:
+  /tasks/{owner_name}/{job_queue_id}/{job_id}/{task_name}/_fail:
     post:
       tags: [Tasks]
       operationId: app.fail_task
       summary: Worker reports failure of a task
       parameters:
-        - $ref: '#/parameters/account_name'
+        - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/job_queue_id'
         - $ref: '#/parameters/job_id'
         - $ref: '#/parameters/task_name'
@@ -309,9 +309,9 @@ paths:
           description: Action performed
 
 parameters:
-  account_name:
-    name: account_name
-    description: Account's unique name
+  owner_name:
+    name: owner_name
+    description: Owner's unique name
     in: path
     type: string
     required: true
